--- a/style.css
+++ b/style.css
@@ -4,24 +4,29 @@
   box-sizing: border-box;
 }
 
-.header {
-  width: 100%;
-  height: 50px;
-  background-color: red;
-}
-
 .main-visual {
   width: 100%;
   height: 500px;
   background-color: orange;
 }
 
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: red;
+}
+
 .main {
   width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.sidebar-left {
+  width: 230px;
   height: 1400px;
   background-color: palegreen;
-  padding: 0 230px 0 230px;
-  margin: 0 auto;
 }
 
 .blog {
@@ -30,3 +35,14 @@
   background-color: limegreen;
 }
 
+.sidebar-right {
+  width: 230px;
+  height: 1400px;
+  background-color: palegreen;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+}
